Upgrade react & babel

--- a/examples/demo.html
+++ b/examples/demo.html
@@ -11,6 +11,6 @@
 </body>
 </html>
 
-<script src="react-0.14.4.min.js"></script>
-<script src="react-dom-0.14.4.min.js"></script>
+<script src="react/15.1.0/react.min.js"></script>
+<script src="react/15.1.0/react-dom.min.js"></script>
 <script src="demo.js"></script>
