update for react v15.5.x

--- a/examples/demo.html
+++ b/examples/demo.html
@@ -11,6 +11,7 @@
 </body>
 </html>
 
-<script src="react/15.1.0/react.min.js"></script>
-<script src="react/15.1.0/react-dom.min.js"></script>
+<script src="react/15.5.x/react.min.js"></script>
+<script src="react/15.5.x/react-dom.min.js"></script>
+<script src="react/15.5.x/prop-types.min.js"></script>
 <script src="demo.js"></script>
